<resources>
    <string name="app_name">CountDownTimer</string>
    <string name="action_settings">Settings</string>

    <string name="period_duration_setting" translatable="false">period_duration</string>
    <string name="period_duration_setting_title" translatable="false">Period</string>
    <string name="period_duration_default_setting" translatable="false">1:10</string>

    <string name="action_duration_setting" translatable="false">action_duration</string>
    <string name="action_duration_setting_title" translatable="false">Action</string>
    <string name="action_duration_default_setting" translatable="false">24</string>
    <string name="title_activity_timer_settings">Timer Settings</string>

    <!-- Strings related to Settings -->

    <!-- Period settings -->
    <string name="pref_header_period">Period settings</string>

    <string name="pref_title_number_of_periods">Number of periods</string>
    <string name="preference_period_number_of_periods">preference_period_number_of_periods</string>
    <string-array name="pref_number_of_periods_list_titles">
        <item>2 halves</item>
        <item>4 quarters</item>
    </string-array>
    <string-array name="pref_number_of_periods_list_values">
        <item>2</item>
        <item>4</item>
    </string-array>

    <string name="pref_title_duration_of_periods">Duration of periods</string>
    <string name="preference_period_duration_of_periods">preference_period_duration_of_periods</string>
    <string-array name="pref_duration_of_periods_list_titles">
        <item>8 minutes</item>
        <item>10 minutes</item>
        <item>12 minutes</item>
        <item>20 minutes</item>
    </string-array>
    <string-array name="pref_duration_of_periods_list_values">
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>20</item>
    </string-array>

    <string name="pref_title_duration_of_extra_periods">Duration of extra periods</string>
    <string name="preference_period_duration_of_extra_periods">preference_period_duration_of_extra_periods</string>
    <string-array name="pref_duration_of_extra_periods_list_titles">
        <item>5 minutes</item>
        <item>6 minutes</item>
    </string-array>
    <string-array name="pref_duration_of_extra_periods_list_values">
        <item>5</item>
        <item>6</item>
    </string-array>

    <!-- Action settings -->
    <string name="pref_header_shot_clock">Shot clock settings</string>

    <string name="pref_title_shot_clock_duration">Shot clock duration</string>
    <string name="preference_shot_clock_duration">preference_shot_clock_duration</string>
    <string-array name="pref_shot_clock_duration_list_titles">
        <item>24 seconds</item>
        <item>30 seconds</item>
        <item>35 seconds</item>
    </string-array>
    <string-array name="pref_shot_clock_duration_list_values">
        <item>24</item>
        <item>30</item>
        <item>35</item>
    </string-array>

    <string name="pref_title_shot_clock_recycle_offensive_rebound">Offensive rebound recycles shot clock to different shot clock time?</string>
    <string name="preference_shot_clock_recycle_offensive_rebound">preference_shot_clock_recycle_offensive_rebound</string>

    <string name="pref_title_shot_clock_recycle_duration">Recycled shot clock duration</string>
    <string name="preference_shot_clock_recycle_duration">preference_shot_clock_recycle_duration</string>
    <string-array name="pref_shot_clock_recycle_duration_list_titles">
        <item>14 seconds</item>
        <item>20 seconds</item>
    </string-array>
    <string-array name="pref_shot_clock_recycle_duration_list_values">
        <item>14</item>
        <item>20</item>
    </string-array>


</resources>
