<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="4"
        android:entries="@array/pref_number_of_periods_list_titles"
        android:entryValues="@array/pref_number_of_periods_list_values"
        android:key="@string/preference_period_number_of_periods"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_number_of_periods" />

    <ListPreference
        android:defaultValue="10:00"
        android:entries="@array/pref_duration_of_periods_list_titles"
        android:entryValues="@array/pref_duration_of_periods_list_values"
        android:key="@string/preference_period_duration_of_periods"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_duration_of_periods" />

    <ListPreference
        android:defaultValue="5:00"
        android:entries="@array/pref_duration_of_extra_periods_list_titles"
        android:entryValues="@array/pref_duration_of_extra_periods_list_values"
        android:key="@string/preference_period_duration_of_extra_periods"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_duration_of_extra_periods" />

</PreferenceScreen>
